--- a/styles.css
+++ b/styles.css
@@ -275,3 +275,11 @@ blockquote:not(.twitter-tweet) p {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   border: none;
 }
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 2rem auto;
+  border-radius: 4px;
+}
