--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,10 @@
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #1a202c;
+    --background-color: #0F0F0F;
     --text-color: #e2e8f0;
     --text-color-light: #a0aec0;
-    --link-color: #63b3ed;
+    --link-color: #00d7ba;
     --link-hover-color: #90cdf4;
     --border-color: #2d3748;
     --heading-color: #f7fafc;
@@ -38,7 +38,7 @@ html {
 body {
   background-color: var(--background-color);
   color: var(--text-color);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family:  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   line-height: 1.7;
   margin: 0 auto;
   max-width: 42rem;
@@ -55,6 +55,7 @@ body {
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
   color: var(--heading-color);
+  font-family: 'Jacquard 12', serif;
   font-weight: 700;
   line-height: 1.25;
   margin: 1.25rem 0 0.75rem;
