--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     --link-hover-color: #90cdf4;
     --border-color: #2d3748;
     --heading-color: #f7fafc;
-    --bold-color: #fabf10;
+    --bold-color: #e2e8f0;
   }
 }
 
