light mode color

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   --link-hover-color: #2c5282;
   --border-color: #e2e8f0;
   --heading-color: #1a202c;
-  --bold-color: #fabf10;
+  --bold-color: #2d3748;
 }
 
 /* Dark mode */
